--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "deploy": "gh-pages -d dist"
     },
     "dependencies": {
+        "antd": "^5.26.7",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-intl": "^7.1.11",
